kubernetes/lab2/ingress-accounts-svc.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: accounts-tls
  namespace: accounts
spec: 
  tls: 
  - hosts:
      - accounts.svc
    secretName: accounts-tls-certs
  rules:
  - host: accounts-svc
    http:
      paths: 
      - path: /
        pathTypes: Prefix  
        backend: 
          service:
            name: accounts-svc 
            port: 
              number: 80
